# citas-bot-universal

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_handoff_flag.py  0003_reminder_flags.py
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DATA_MODEL.md  DEPLOYMENT.md  INTENTS.md  WEBHOOK.md
examples/barberia/: .env.example  README.md
src/citas_bot/: __init__.py  config.py  main.py
src/citas_bot/api/schemas/: __init__.py  appointment.py  customer.py
src/citas_bot/data/: __init__.py  cli.py  db.py
src/citas_bot/data/repositories/: __init__.py  appointment.py  conversation.py  customer.py
src/citas_bot/domain/: __init__.py  appointment.py  base.py  conversation.py  customer.py
src/citas_bot/intents/: __init__.py  base.py  book.py  cancel.py  default.py  handoff.py  info.py  intl.py  list_mine.py  registry.py  reschedule.py  router.py
src/citas_bot/llm/: __init__.py  anthropic.py  base.py  cost.py  factory.py
src/citas_bot/messaging/: __init__.py  meta_sender.py  sender.py
src/citas_bot/observability/: __init__.py  logging.py
src/citas_bot/scheduling/: __init__.py  reminders.py
src/citas_bot/webhooks/: __init__.py  router.py  schemas.py  security.py
tests/: conftest.py  test_book_flow.py  test_can_import.py  test_cli.py  test_db.py  test_health.py  test_intents.py  test_llm_anthropic.py  test_llm_base.py  test_llm_cost.py  test_llm_factory.py  test_meta_sender.py  test_more_intents.py  test_recorded_conversations.py  test_reminders.py  test_repositories.py  test_schemas.py  test_webhook_receive.py  test_webhook_verify.py
tests/fixtures/conversations/: book_happy_path.json  book_then_cancel.json  handoff.json  info_keyword.json
