[project]
name = "citas-bot-universal"
version = "0.0.4"
description = "Template Python para asistentes WhatsApp de citas. Fork, personaliza, deploya."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abelardo Diaz", email = "abelardo.diaz@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Chat",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "structlog>=24.1.0",
  "anthropic>=0.40.0",
  "tenacity>=8.5.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/abelardodiaz/citas-bot-universal"
Repository = "https://github.com/abelardodiaz/citas-bot-universal"
Issues = "https://github.com/abelardodiaz/citas-bot-universal/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citas_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/citas_bot --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/citas_bot"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
